# tsre-der-opentes

./: README.md  main.py  pyproject.toml  requirements.txt
src/: CENARIOTCCV1.py  main.py
src/data/: CriarRede.py  solar_data_Bremen_minutes.csv
src/output/: results.csv
src/scenarios/: base_scenario.py
src/simulators/: collector.py  controller_des_NO.py  controller_des_SEM.py  controller_des_VV.py  controller_des_VW.py  csv_sim_pandas.py  pv_model.py  pv_simulator.py
