[project]
name = "tsre-der-opentes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.5"
dependencies = [
    "mosaik==3.2.0",
    "mosaik-pandapower==0.2.2",
    "opender==2.1.6",
    "setuptools==69.5.1",
]

[project.scripts]
# Define os comandos de console. A chave ('tsre') é o comando.
# O valor aponta para 'nome_do_pacote.nome_do_modulo:nome_da_funcao'.
# Ex: 'my_package.main:run' -> src/my_package/main.py (e a função run lá dentro).
# Lembre-se de sincronizar o nome do pacote com 'known-first-party' do Ruff.
tsre = "main:main"

# ============================
# Build e Setuptools
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Informa ao setuptools para encontrar os pacotes dentro da pasta 'src'.
# Essencial para a estrutura de layout com 'src/'.
where = ["src"]

[tool.setuptools]
# Mapeia o diretório raiz de pacotes para 'src'.
package-dir = { "" = "src" }